header content and styling

--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,36 @@ img {
 body {
   color: var(--bg-color);
 }
+
+/* header */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--bg-color);
+  box-shadow: 0 1px 4px hsl(0 4% 15% /10%);
+}
+.container {
+  max-width: 1068px;
+  margin: auto;
+  width: 100%;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.logo {
+  font-size: 1.1rem;
+  color: var(--text-color);
+  font-weight: 400;
+}
+
+#cart-icon {
+  font-size: 1.8rem;
+  cursor: pointer;
+  color: var(--text-color);
+}
