--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,7 @@
 }
 
 img {
-  object-fit: cover;
-  width: 230px;
-  height: 230px;
+  width: 100%;
 }
 body {
   color: var(--bg-color);
@@ -41,6 +39,7 @@ header {
   width: 100%;
   background: var(--bg-color);
   box-shadow: 0 1px 4px hsl(0 4% 15% /10%);
+  z-index: 99;
 }
 
 .nav {
@@ -67,18 +66,76 @@ header {
   text-align: center;
   font-size: 1.5rem;
   font-weight: 700;
+  margin-bottom: 1.5rem;
 }
 
+/* cart */
+.cart {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 360px;
+  min-height: 100vh;
+  padding: 20px;
+  background: var(--bg-color);
+  box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
+}
+
+.cart-title {
+  text-align: center;
+  font-size: 1.5rem;
+  color: var(--text-color);
+  font-weight: 600;
+  margin-top: 2rem;
+}
 .shop {
   margin-top: 2rem;
 }
 
 .product-box {
   color: black;
+  position: relative;
+  transition: all 400ms ease;
+}
+
+.product-box:hover {
+  padding: 10px;
+  border: 1px solid var(--text-color);
 }
 
 .shop-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, auto));
   gap: 2rem;
+}
+
+.product-img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+
+.product-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+}
+
+.price {
+  font-weight: 500;
+}
+
+.add-cart {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: var(--text-color);
+  padding: 10px;
+  cursor: pointer;
+  color: var(--bg-color);
+}
+
+.add-cart:hover {
+  background: hsl(249, 32%, 17%);
 }
