add cart order content

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ header {
   padding: 20px;
   background: var(--bg-color);
   box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
+  color: var(--text-color);
 }
 
 .cart-title {
