--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,28 @@ header {
   padding: 20px;
 }
 
+form {
+  color: var(--text-color);
+  width: 60%;
+  border: 1px solid var(--text-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+form > input {
+  border: none;
+  outline: none;
+  box-shadow: none;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 8px 10px;
+}
+
+form > i {
+  padding-left: 10px;
+}
 .logo {
   font-size: 1.1rem;
   color: var(--text-color);
